WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258484
Fullscreen video does not always match window size at certain resolutions
https://bugs.webkit.org/show_bug.cgi?id=258484
Summary
Fullscreen video does not always match window size at certain resolutions
Mike Wyrzykowski
Reported
2023-06-23 15:06:54 PDT
Fullscreen video does not always match window size at certain resolutions
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2023-06-23 15:26:22 PDT
radar://110724034
Mike Wyrzykowski
Comment 2
2023-06-23 23:40:10 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/15271
EWS
Comment 3
2023-06-30 15:36:21 PDT
Committed
265672@main
(c819e77ac567): <
https://commits.webkit.org/265672@main
> Reviewed commits have been landed. Closing PR #15271 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug